[package]
name = "zenscan"
version = "0.1.3"
authors = ["Nirna Kayanovsky <nirnakayanovsky@gmail.com>"]
edition = "2018"
license ="MIT"
readme = "README.md"
description = "This program is port scanner to target server."
keywords = ["security", "portscanner", "cli"]
categories = ["network-programming", "command-line-interface"]  

[dependencies]
clap = "2.27.0"
pnet = "0.26.0"
rayon = "1.3.0"
dns-lookup = "1.0.3"
better-panic ="*"
